--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^29.2.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "4.8.4"
   },
   "browserslist": [
